# tardis-fs

./: .gitignore  Makefile  README.md  api.h  block_operations.c  defs.h  file_operations.c  libtfs.c  libtfs.h  meson.build  mkfs.c  new2.tar.xz  readwrite.c  tfs.c
docs/: annotated.html  api_8h.html  api_8h_source.html  attr__operations_8c.html  attr__operations_8c_source.html  block__operations_8c.html  block__operations_8c_source.html  classes.html  defs_8h.html  defs_8h_source.html  dir_428053a78fbea477e88a2aef091aa9d5.html  dir_93b62320201ff49ec59e8575dbaad3e0.html  dir__operations_8c.html  dir__operations_8c_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_df8c75e7e1b250f9cbda5e12ccf174f8.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  libfuse_2file__operations_8c.html  libfuse_2file__operations_8c_source.html  libfuse_2utils_8c.html  libfuse_2utils_8c_source.html  libtfs_8c.html  libtfs_8c_source.html  libtfs_8h.html  libtfs_8h_source.html  menudata.js  mkfs_8c.html  mkfs_8c_source.html  mount_2file__operations_8c.html  mount_2file__operations_8c_source.html  (+8 more)
examine/: examine.c  meson.build
include/: api.h  defs.h  libtfs.h  log.h  log_disabled.h
inspect/: inspect.c  meson.build
libfuse/: block_operations.c  file_operations.c  libtfs.c  meson.build  readwrite.c  utils.c
mkfs/: mkfs.c
mount/: attr_operations.c  dir_operations.c  file_operations.c  meson.build  mount.c  mount.h  utils.c
scripts/: ins.sh  (+3 more)
(+61 files in other folders)
